--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "sass": "^1.85.0",
     "sass-loader": "^16.0.5",
-    "vue": "^3.5.13"
+    "v-mask": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
